# ojaoma

./: .gitignore  package-lock.json  package.json  pyproject.toml  pyvenv.cfg  requirements.txt
Scripts/: activate  activate.bat
backend/: settings.py
ojaoma/: apps.py
portfolio/: settings.py
server/: requirements.txt
server/projeto/: settings.py
