[tool.poetry]
name = "-"
version = "0.1.0"
description = "Backend com Django e Poetry"
authors = ["Joao Costa"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
Django = "^5.1.3"
djangorestframework = "^3.15.2"
django-cors-headers = "^4.6.0"
python-dotenv = "^1.0.1"
gunicorn = "^23.0.0"
whitenoise = "^6.8.2"
dj-database-url = "^2.3.0"
psycopg2-binary = "^2.9.10"
django-environ = "^0.11.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
